--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;200;500&display=swap');
+
 * {
-  box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Montserrat Alternates', sans-serif;
 }
 
 html,
