--- a/src/styles/Desk1.module.css
+++ b/src/styles/Desk1.module.css
@@ -2,8 +2,61 @@
     width: 100%;
     height: 1000px;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
     background-color: #1B1926;
     color: #fff;
+}
+
+.body {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 120px;
+}
+
+.nome {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: 200;
+    font-size: 5rem;
+}
+
+.imgAvatar {
+    animation: sobedesce 2.5s infinite alternate
+}
+
+@keyframes sobedesce {
+    from {
+      transform: translateY(-50px);
+    }
+    to {
+      transform: translateY(0);
+    }
+}
+
+.desc {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-weight: 200;
+    font-size: 2rem;
+}
+
+.btn {
+    border: none;
+    padding: 10px 20px 10px 20px;
+    font-size: 1.2rem;
+    font-weight: 200;
+    color: #fff;
+    border-radius: 10px;
+    margin-top: 100px;
+    background-image: linear-gradient(to right bottom, #464D64, #788EA9);
+    transition: .6s all ease-in-out;
+}
+
+.btn:hover {
+    transform: scale(1.05);
 }
