--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -1,8 +1,9 @@
-.head {
+.navbar {
     display: flex;
     width: 100%;
     justify-content: space-between;
     margin: 0 5% 0 0;
+    position: fixed;
     background-color: #1B1926;
 }
 
