--- a/src/styles/Desk1.module.css
+++ b/src/styles/Desk1.module.css
@@ -3,8 +3,10 @@
     height: 1000px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     background-color: #1B1926;
     color: #fff;
+    padding-top: 100px;
 }
 
 .body {
@@ -55,6 +57,7 @@
     margin-top: 100px;
     background-image: linear-gradient(to right bottom, #464D64, #788EA9);
     transition: .6s all ease-in-out;
+    outline: none;
 }
 
 .btn:hover {
