--- a/src/styles/Desk2.module.css
+++ b/src/styles/Desk2.module.css
@@ -37,7 +37,7 @@
     align-items: center;
     justify-content: center;
     text-align: initial;
-    z-index: 1;
+    z-index: 0.8;
 }
 
 .textSobreMim {
@@ -45,7 +45,9 @@
     width: 100%;
     margin-bottom: 20px;
     font-size: 1.2rem;
-
+    line-height: 1.6em;
+    font-size: 1.3rem;
+    font-weight: 200;
 }
 
 .imgBall {
