--- a/src/styles/Desk3.module.css
+++ b/src/styles/Desk3.module.css
@@ -2,8 +2,45 @@
     width: 100%;
     height: 1000px;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
     background-color: #1B1926;
     color: #fff;
 }
+
+.titulo {
+    font-size: 2rem;
+    margin-top: 30px;
+}
+
+.cabecalho {
+    font-size: 1.3rem;
+    margin-top: 20px;
+}
+
+.square {
+    width: 400px;
+    height: 300px;
+    border-radius: 20px;
+    background-color: #464D64;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 15px;
+    margin: 50px;
+}
+
+.cabecalhoDesc {
+    text-align: center;
+    margin: 20px 0 20px 0;
+}
+
+.desc {
+    text-align: center;
+    color: #fff;
+    font-weight: 200;
+    font-size: 1.1rem;
+    letter-spacing: 1px;
+}
+
