--- a/src/styles/Desk3.module.css
+++ b/src/styles/Desk3.module.css
@@ -44,3 +44,16 @@
     letter-spacing: 1px;
 }
 
+.skils {
+    display: flex;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding: 0;
+}
+
+.square {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 0;
+}
+
