--- a/src/styles/Desk3.module.css
+++ b/src/styles/Desk3.module.css
@@ -12,6 +12,12 @@
     font-size: 2rem;
     margin-top: 30px;
 }
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
 .cabecalho {
     font-size: 1.3rem;
@@ -42,11 +48,12 @@
     font-weight: 200;
     font-size: 1.1rem;
     letter-spacing: 1px;
+    padding: 10px;
 }
 
 .skils {
     display: flex;
-    margin-top: 0;
+    margin-top: 50px;
     margin-bottom: 0;
     padding: 0;
 }
