--- a/src/styles/project.module.css
+++ b/src/styles/project.module.css
@@ -7,6 +7,7 @@
     justify-content: space-evenly;
     width: 80%;
     padding-top: 50px;
+    margin: 25px 0 25px 0;
 }
 
 .projectDesc {
@@ -88,20 +89,36 @@
     padding-top: 50px;
 }
 
-.projectDesce {
+.projectDescE {
     display: flex;
     flex-direction: column;
     padding-top: 100px;
-    margin-left: 30px;
+    margin-right: 30px;
+    align-items: end;
 }
 
 .title {
     color: #a9cdec;
     font-size: 1.2rem;
     margin-bottom: 5px;
+    text-align: right;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
 }
 
-.linguagens {
+
+.titleE {
+    color: #a9cdec;
+    font-size: 1.2rem;
+    margin-bottom: 5px;
+    text-align: right;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+
+.linguagense {
     display: flex;
     margin-bottom: 20px;
 }
@@ -138,12 +155,16 @@
     cursor: pointer;
 }
 
-.linkVerGit {
+.linkVerGite {
     color: #a9cdec;
     transition: .2s all ease-in-out;
 }
 
-.linkVerGit:hover {
+.linkVerGite:hover {
     text-decoration: none;
     transform: scale(1.02);
+}
+
+.projectImge {
+    border-radius: 20px 0 20px 0;
 }
