--- a/src/styles/Desk3.module.css
+++ b/src/styles/Desk3.module.css
@@ -64,3 +64,15 @@
     padding: 0;
 }
 
+
+@media (max-width: 1600px) {
+    .square {
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    .square {
+        width: 300px;
+        height: 200px;
+    }
+}
+
