--- a/src/styles/Desk1.module.css
+++ b/src/styles/Desk1.module.css
@@ -63,3 +63,25 @@
 .btn:hover {
     transform: scale(1.05);
 }
+
+@media (max-width: 740px) {
+    .nome {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        font-weight: 200;
+        font-size: 5rem;
+    }
+}
+
+@media (max-width: 500px) {
+    .nome {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        font-weight: 200;
+        font-size: 3rem;
+    }
+}
