--- a/src/styles/Desk2.module.css
+++ b/src/styles/Desk2.module.css
@@ -49,7 +49,16 @@
     font-weight: 200;
 }
 
-.textSobreMim {
+.textSobreMim1 {
+    display: flex;
+    width: 100%;
+    margin-bottom: 20px;
+    line-height: 1.6em;
+    font-size: 1.3rem;
+    font-weight: 200;
+}
+
+.textSobreMim2 {
     display: flex;
     width: 100%;
     margin-bottom: 20px;
@@ -120,6 +129,10 @@
         line-height: 1.8em;
         font-size: 1rem;
     }
+    .textSobreMim1 {
+        line-height: 1.8em;
+        font-size: .9rem;
+    }
     .cabecalho {
         font-size: 1.5rem;
     }
@@ -139,3 +152,4 @@
         margin-left: 5%;
     }
 }
+
