--- a/src/styles/Desk4.module.css
+++ b/src/styles/Desk4.module.css
@@ -19,3 +19,48 @@
 .a:hover {
     cursor: pointer;
 }
+
+.titulo {
+    font-size: 3.5rem;
+}
+
+@media (max-width: 1300px) {
+    .Desk4 {
+        height: 1200px;
+    }
+}
+@media (max-width: 900px) {
+    .Desk4 {
+        height: 1100px;
+    }
+}
+@media (max-width: 670px) {
+    .Desk4 {
+        height: 900px;
+    }
+}
+
+@media (max-width: 930px) {
+    .titulo {
+        font-size: 3rem;
+    }
+}
+
+@media (max-width: 800px) {
+    .titulo {
+        font-size: 2.5rem;
+    }
+}
+
+@media (max-width: 670px) {
+    .titulo {
+        font-size: 2rem;
+    }
+}
+
+@media (max-width: 535px) {
+    .titulo {
+        text-align: center;
+    }
+}
+
