--- a/src/styles/project.module.css
+++ b/src/styles/project.module.css
@@ -4,7 +4,8 @@
 
 .content {
     display: flex;
-    justify-content: space-evenly;
+    align-items: center;
+    justify-content: center;
     width: 80%;
     padding-top: 50px;
     margin: 25px 0 25px 0;
@@ -13,6 +14,10 @@
 .projectDesc {
     display: flex;
     flex-direction: column;
+    align-items: initial;
+    justify-content: initial;
+    width: 100%;
+    height: 100%;
     padding-top: 100px;
     margin-left: 30px;
 }
@@ -84,7 +89,7 @@
 
 .content {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: end;
     width: 80%;
     padding-top: 50px;
 }
@@ -92,8 +97,10 @@
 .projectDescE {
     display: flex;
     flex-direction: column;
+    align-items: end;
+    justify-content: end;
     padding-top: 100px;
-    margin-right: 30px;
+    margin-left: 30px;
     align-items: end;
 }
 
@@ -167,4 +174,152 @@
 
 .projectImge {
     border-radius: 20px 0 20px 0;
+}
+
+
+@media (max-width: 1400px) {
+    .btns {
+        width: 90%;
+    }
+    .btnse {
+        width: 90%;
+    }
+    .projectDescE {
+        margin-left: 30px;
+    }
+}
+
+@media (max-width: 1350px) {
+    .btns {
+        width: 100%;
+    }
+    .btnse {
+        width: 100%;
+    }
+    .projectDescE {
+        margin-left: 30px;
+    }
+}
+
+@media (max-width: 1300px) {
+    .btns {
+        display: flex;
+        flex-direction: column;
+    }
+    .btnse {
+        display: flex;
+        flex-direction: column;
+    }
+    .btn {
+        margin-bottom: 20px;
+    }
+    .btne {
+        margin-top: 20px;
+    }
+    .projectDescE {
+        margin-left: 30px;
+    }
+}
+
+@media (max-width: 1400px) {
+    .projectImg {
+        border-radius: 0 20px 0  20px;
+        width: 600px;
+        height: 400px;
+    }
+    .projectImge {
+        border-radius: 0 20px 0  20px;
+        width: 600px;
+        height: 400px;
+    }
+    .projectDescE {
+        margin-left: 30px;
+    }
+}
+
+@media (max-width: 930px) {
+    .projectImg {
+        border-radius: 0 20px 0  20px;
+        width: 500px;
+        height: 300px;
+    }
+    .projectImge {
+        border-radius: 0 20px 0  20px;
+        width: 500px;
+        height: 300px;
+    }
+    .content {
+        padding: 0px;
+    }
+    .projectDescE {
+        margin-left: 30px;
+    }
+}
+
+@media (max-width: 750px) {
+    .projectImg {
+        border-radius: 0 20px 0  20px;
+        width: 400px;
+        height: 200px;
+    }
+    .projectImge {
+        border-radius: 0 20px 0  20px;
+        width: 400px;
+        height: 200px;
+    }
+    .content {
+        padding: 0px;
+    }
+    .projectDescE {
+        margin-left: 300px;
+    }
+}
+
+@media (max-width: 670px) {
+    .projectImg {
+        display: none;
+    }  
+    .projectImge {
+        display: none;
+    } 
+    .projectDesc {
+        align-items: initial;
+        padding: 20px;
+    }
+    .projectDescE {
+        align-items: end;
+        padding: 20px;
+        margin-left: 30px;
+    }
+    .titleE {
+        align-items: end;
+    }
+    .btns {
+        display: flex;
+        flex-direction: row;
+    }
+    .btnse {
+        display: flex;
+        flex-direction: row;
+    }
+}
+
+@media (max-width: 500px) {
+    .btns {
+        display: flex;
+        flex-direction: column;
+    }
+    .btnse {
+        display: flex;
+        flex-direction: column;
+    }
+    .btn {
+        margin-bottom: 20px;
+    }
+    .btne {
+        margin-top: 20px;
+    }
+    .projectDescE {
+        margin-left: 30px;
+    }
 }
