--- a/src/styles/Desk5.module.css
+++ b/src/styles/Desk5.module.css
@@ -10,3 +10,22 @@
     display: flex;
     bottom: 0;
 }
+
+@media (max-width: 900px) {
+    .imgLogo {
+        display: none;
+    }
+}
+
+@media (max-width: 640px) {
+    .imgfooter {
+        display: none;
+    }
+    .direito {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
