Adicionando mais um projeto (linklibrary) e uma pequena alteração no cinemaven

--- a/src/styles/project.module.css
+++ b/src/styles/project.module.css
@@ -100,7 +100,7 @@
     align-items: end;
     justify-content: end;
     padding-top: 100px;
-    margin-left: 30px;
+    margin-right: 30px;
     align-items: end;
 }
 
