--- a/src/styles/Desk2.module.css
+++ b/src/styles/Desk2.module.css
@@ -52,7 +52,6 @@
 .textSobreMim1 {
     display: flex;
     width: 100%;
-    margin-bottom: 20px;
     line-height: 1.6em;
     font-size: 1.3rem;
     font-weight: 200;
@@ -80,7 +79,7 @@
     }
     .Desk2 {
         width: 100%;
-        height: 750px;
+        height: 550px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -131,14 +130,14 @@
     }
     .textSobreMim1 {
         line-height: 1.8em;
-        font-size: .9rem;
+        font-size: 1.09rem;
     }
     .cabecalho {
         font-size: 1.5rem;
     }
     .Desk2 {
         width: 100%;
-        height: 600px;
+        height: 500px;
         display: flex;
         justify-content: left;
         background-color: #313541;
