--- a/src/styles/project.module.css
+++ b/src/styles/project.module.css
@@ -186,6 +186,12 @@
     }
     .projectDescE {
         margin-left: 30px;
+        margin-bottom: 50px;
+    }
+    .projectDesc {
+        margin-left: 30px;
+        margin-bottom: 20px;
+
     }
 }
 
@@ -304,7 +310,7 @@
     }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
     .btns {
         display: flex;
         flex-direction: column;
@@ -320,6 +326,41 @@
         margin-top: 20px;
     }
     .projectDescE {
-        margin-left: 30px;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 0;
+        margin-bottom: 70px;
+    }
+    .btns {
+        margin-top: 20px;
+    }
+    .projectDesc{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 0;
+        margin-bottom: 70px;
+    }
+    .btnse {
+        margin-top: 20px;
+    }
+    .content{
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        height: 100%;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 0;
     }
 }
