--- a/src/styles/Desk1.module.css
+++ b/src/styles/Desk1.module.css
@@ -47,6 +47,15 @@
     font-size: 2rem;
 }
 
+.profiss {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-weight: 200;
+    font-size: 2rem;
+    text-align: center;
+}
+
 .btn {
     border: none;
     padding: 10px 20px 10px 20px;
@@ -86,5 +95,9 @@
     }
     .Desk1 {
         height: 800px;
+    }
+
+    .profiss {
+        text-align: center;
     }
 }
